added resister page

--- a/best/templates/basic.html
+++ b/best/templates/basic.html
@@ -33,7 +33,7 @@
       <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
       GamingKeeda
     </a>
-    <button type="button" id="butt" class="btn btn-success">Success</button>
+    <a type="button" id="butt" class="btn btn-success" href="/accounts/register"> resister </a>
   </nav>
    
     {% block body %} {% endblock %}
