--- a/best/templates/basic.html
+++ b/best/templates/basic.html
@@ -29,11 +29,16 @@
   <body>
       <!-- Image and text -->
 <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
-      <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+    <a class="navbar-brand" href="/">
+      <img src="/media/preview.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
       GamingKeeda
     </a>
-    <a type="button" id="butt" class="btn btn-success" href="/accounts/register"> resister </a>
+    {% if user.is_authenticated %}
+    <P>Hello, {{user.first_name}} </P>
+    <a type="button" id="butt" class="btn btn-success" href="/accounts/logout"> logout </a>
+    {% else %}
+    <a type="button" id="butt" class="btn btn-success" href="/accounts/register"> Register </a>
+    {% endif %}
   </nav>
    
     {% block body %} {% endblock %}
