--- a/best/templates/register.html
+++ b/best/templates/register.html
@@ -18,15 +18,31 @@
 </style>
  {% endblock %}
  {% block body %}
+ <h1>LogIn</h1>
+<form action="login" method="post">
+    {% csrf_token %}
+<div class="form-group">
+    <label for="exampleFormControlInput1" class="wts">User Name</label>
+    <input type="text" class="form-control" name="username" id="exampleFormControlInput1" placeholder="User Name">
+</div>
+<div class="form-group">
+    <label for="exampleFormControlInput1" class="wts">Password</label>
+    <input type="password" class="form-control" name="password" id="exampleFormControlInput1" placeholder="name@example.com">
+  </div>
+  <input type="submit">
+
+  <h1>OR</h1>
 
 <h1 id="headinga">Register Now</h1>
+
+
  <div class="container">
     <div class="row">
       <div class="col">
         1 of 3
       </div>
       <div class="col-8">
-        <form action="resister" method="POST">
+        <form action="register" method="post">
                 {% csrf_token %}
             <div class="form-group">
                 <label for="exampleFormControlInput1" class="wts">User Name</label>
@@ -54,27 +70,22 @@
                   <input type="password" name="password2" class="form-control" placeholder="Confirm Password">
                 </div>
               </div>
-            <div class="form-group">
-                <label for="exampleFormControlInput1" class="wts">PUBG Name</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="PUBG Name">
-            </div>
         
         
         
-            <div class="form-check">
+            <div class="form-check my-3">
                 <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
                 <label class="form-check-label" for="defaultCheck1">
-                  i agree with term and conditions
+                  i agree with <a href="/termsandconditions/">terms and conditions.</a>
                 </label>
             </div>
-            <input type="submit">
+            <input class="btn btn-primary btn-sm" type="submit" method='POST'>
           </form>
       </div>
       <div class="col">
         3 of 3
       </div>
     </div>
- 
 
 
 
